--- a/src/assets/stylus/reset.styl
+++ b/src/assets/stylus/reset.styl
@@ -15,31 +15,39 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video
-	margin: 0
-	padding: 0
-	border: 0
-	font-size: 100%
-	font: inherit
-	vertical-align: baseline
+time, mark, audio, video 
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section
-	display: block
-body
-	line-height: 1
-ol, ul
-	list-style: none
-blockquote, q
-	quotes: none
-blockquote:before, blockquote:after,
-q:before, q:after
-	content: ''
-	content: none
-table
-	border-collapse: collapse
-	border-spacing: 0
+	display: block;
 
+body
+	line-height: 1;
+
+ol, ul
+	list-style: none;
+blockquote, q 
+	quotes: none;
+
+blockquote:before, blockquote:after,
+q:before, q:after 
+	content: '';
+	content: none;
+
+table 
+	border-collapse: collapse;
+	border-spacing: 0;
+
+html
+    touch-action: none
+    
 .scale-1px
 	position: relative
 	&:after
@@ -53,5 +61,3 @@ table
 		transform: scaleY(0.5)
 		@media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
 			transform: scaleY(0.33)
-  
-
